@@ -2,6 +2,7 @@ Version 0.5-7 (2013-03-01)
 
 o Completed CMHtest methods, adding overall tests across strata in a general way
 o CMHtest now gets an S3 generic with a formula interface
+o print Kappa gets digits= and CI= arguments
 
 Version 0.5-6 (2012-11-30)
 
